# DiscordHook

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt  Cmake.bat
Client/Sources/: main.cpp
DLL/: CMakeLists.txt
DLL/Includes/: Header.hh
DLL/Sources/: Dll.cpp
